# CPP-Renderer2D

./: CMakeLists.txt  README.md
assets/shaders/2d-renderer/: fragment.glsl  vertex.glsl
assets/shaders/screen/: fragment.glsl  vertex.glsl
assets/shaders/sprite/: fragment.glsl  vertex.glsl
demo/: CMakeLists.txt  main.cpp
renderer2d/: Application.cpp  Application.hpp  CMakeLists.txt  Window.cpp  Window.hpp
renderer2d/renderer/: Camera2D.hpp  LineBatch.hpp  Renderer2D.hpp  SpriteBatch.hpp  SpriteInstance.hpp  Surface.hpp
renderer2d/renderer/gl/: FrameBuffer.hpp  IndexBuffer.hpp  Shader.hpp  Texture2D.hpp  VertexArray.hpp
src/: Application.cpp  Application.hpp  main.cpp
src/renderer/gl/: IndexBuffer.hpp  Shader.hpp  Texture2D.hpp  Texture2DArray.hpp  VertexArray.hpp  VertexBuffer.hpp
